adicionando balance e corrigindo annotations do swaggo
