# internal/domain/schemas/error/error.go
@@ -1,5 +1,0 @@
-package schemas
-
-type ErrorResponse struct {
-	Error string `json:"error"`
-}
