# pkg/routes/v1/balance/balance.go
@@ -11,6 +11,15 @@ func Register(r *gin.RouterGroup) {
 	r.GET("/balance", balance)
 }
 
+// @Summary      Show balance
+// @Tags         balance
+// @Accept       json
+// @Produce      json
+// @Success      200
+// @Failure      400
+// @Failure      404
+// @Failure      500
+// @Router       /balance [get]
 func balance(c *gin.Context) {
 	balance := income.GetTotalIncomeValue() - debt.GetTotalDebtValue()
 
